# audio_opus

./: .gitignore  CMakeLists.txt  alsa_capture_pcm.cpp  audioEncoderFFmpeg.h  audio_opus_encode.cpp  audio_opus_encode.h  audio_pcm_grab.cpp  audio_pcm_grab.h  audiofifo.cpp  audiofifo.h  generic.h  main.cpp
cmake/: FindCppREST.cmake  FindFFmpeg.cmake
